# archon

./: .dir-locals.el  .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  Makefile.in  README  README.md  TODO  TODO.md  aclocal.m4  bootstrap  configure  configure.ac  configure.darwin  configure.devel  do.sh  stat
src/: CMakeLists.txt  Makefile.am  Makefile.in  check_library.cmake  cli_library.cmake  core-config.cmake.in  core_library.cmake  display.cmake  display_library.cmake  font_library.cmake  gfx_library.cmake  image_library.cmake  log_library.cmake  math_library.cmake  render_library.cmake  test.cpp  util.cmake  util_library.cmake
src/archon/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  archon.dox  check.hpp  cli.hpp  cli_test.cpp  config.h.in  config_pub.h.in  display.hpp  features.h  font.hpp  foo.cpp  image.hpp  log.hpp  platform.hpp  render.hpp  test.cpp  unit_test.hpp  version.hpp
src/archon/base/: CMakeLists.txt  append_buffer.hpp  array_seeded_vector.hpp  assert.hpp  base.dox  base64.cpp  base64.hpp  buffer.hpp  build_environment.cpp  build_environment.hpp  build_mode.hpp  channel_logger.hpp  char_codec.hpp  char_mapper.hpp  circular_buffer.hpp  config.h.in  demangle.cpp  demangle.hpp  duplicating_logger.hpp  enum.hpp  features.h  file.cpp  file.hpp  file_stream.hpp  filesystem.hpp  format.hpp  format_as.hpp  format_enc.hpp  format_with.hpp  formattable_value_ref.hpp  frozen_sets.hpp  hex_dump.hpp  index_iterator.hpp  integer.hpp  integer_formatter.hpp  jail_logger.hpp  limit_logger.hpp  locale.cpp  locale.hpp  logger.cpp  (+49 more)
src/archon/check/: CMakeLists.txt  check_arg.hpp  check_macros.hpp  check_namespace.hpp  check_no_error.cpp  check_no_error.hpp  command.cpp  command.hpp  duplicating_reporter.cpp  duplicating_reporter.hpp  fail_context.hpp  pattern_based_test_order.cpp  pattern_based_test_order.hpp  random_seed.cpp  random_seed.hpp  reporter.cpp  reporter.hpp  root_context.hpp  run.hpp  seed_seq.hpp  simple_reporter.cpp  simple_reporter.hpp  standard_path_mapper.cpp  standard_path_mapper.hpp  test_batch_macros.hpp  test_config.hpp  test_context.cpp  test_context.hpp  test_details.hpp  test_list.cpp  test_list.hpp  test_macros.hpp  test_path.hpp  test_runner.cpp  test_runner.hpp  test_trail.cpp  test_trail.hpp  thread_context.hpp  wildcard_filter.cpp  wildcard_filter.hpp  (+2 more)
src/archon/cli/: CMakeLists.txt  attributes.hpp  cli.dox  cli_namespace.hpp  command_line.cpp  command_line.hpp  config.hpp  error_handler.hpp  exception.hpp  help_config.hpp  help_spec_error.hpp  logging_error_handler.hpp  option_actions.hpp  option_attributes.hpp  proc_error.hpp  process.hpp  processor.hpp  processor_fwd.hpp  spec.hpp  spec_error.hpp  spec_support.hpp  string_holder.hpp
src/archon/core/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  algorithm.hpp  archon_version.hpp  array_seeded_buffer.hpp  as_int.hpp  as_list.hpp  ascii_bridge.cpp  ascii_bridge.hpp  assert.hpp  atomic.hpp  base64.cpp  base64.hpp  basic_character_set.hpp  bind.hpp  bind_ptr.hpp  bind_ref.hpp  blocking.hpp  buffer.hpp  buffer_contents.hpp  buffered_text_file.hpp  buffered_text_file_impl_concept.hpp  build_config.cpp  build_config.hpp  build_environment.cpp  build_environment.hpp  build_mode.hpp  char_codec.hpp  char_codec_concept.hpp  char_codec_config.hpp  char_enc.hpp  char_mapper.hpp  charenc_bridge.cpp  charenc_bridge.hpp  circular_buffer.hpp  codec.hpp  concepts.hpp  config.cpp  (+179 more)
src/archon/display/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README  as_key_name.hpp  connection.cpp  connection.hpp  connection_config_sdl.hpp  connection_config_x11.hpp  context.hpp  cursor.hpp  display.dox  display_namespace.hpp  drawable.hpp  error.cpp  error.hpp  event.hpp  event_handler.cpp  event_handler.hpp  geometry.hpp  guarantees.hpp  implementation.cpp  implementation.hpp  implementation_fwd.hpp  implementation_sdl.cpp  implementation_sdl.hpp  implementation_x11.cpp  implementation_x11.hpp  key.hpp  key_code.hpp  keysyms.hpp  list_implementations.cpp  list_implementations.hpp  mandates.hpp  mouse_button.hpp  opengl.cpp  opengl.hpp  pixel_buffer.hpp  resolution.hpp  (+13 more)
src/archon/dom/: .gitignore  CSS-props  DOM_CONS  Makefile.am  Makefile.in  bootstrap.cpp  bootstrap.hpp  core.hpp  css.hpp  document_type_detection  dom.dox  html.hpp  ls.hpp
src/archon/font/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  cache.cpp  cache.hpp  code_point.hpp  face.cpp  face.hpp  fallback-font.conf  fallback-font.txt  font.dox  font_namespace.hpp  impl_fallback.cpp  impl_freetype.cpp  layout_cfg.cpp  layout_cfg.hpp  list.cpp  list.hpp  loader.cpp  loader.hpp  loader_fallback.cpp  loader_fallback.hpp  loader_freetype.cpp  loader_freetype.hpp  size.hpp  text_format.cpp  text_format.hpp  text_render.cpp  text_render.hpp  util.cpp  util.hpp
src/archon/gfx/: gfx_namespace.hpp  object_builder.cpp  object_builder.hpp  scene_builder.cpp  scene_builder.hpp
src/archon/graphics/: .gitignore  Makefile.am  Makefile.in  graphics.dox  scene_builder.cpp  scene_builder.hpp  virt_trackball.cpp  virt_trackball.hpp
src/archon/image/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README  bit_field.hpp  bit_medium.hpp  blend.hpp  block.hpp  box.hpp  buffer_codec.hpp  buffer_format.cpp  buffer_format.hpp  buffered_image.cpp  buffered_image.hpp  channel_packing.hpp  channel_packing_concept.hpp  channel_spec_concept.hpp  color_space.cpp  color_space.hpp  color_space_helper.hpp  comment_handler.hpp  comp_repr.hpp  comp_types.hpp  computed_image.hpp  custom_channel_spec.hpp  error.cpp  error.hpp  file_format.cpp  file_format.hpp  file_format_jpeg.cpp  file_format_jpeg.hpp  file_format_png.cpp  file_format_png.hpp  file_format_registry.cpp  file_format_registry.hpp  format_gif.cpp  format_jpeg.cpp  format_png.cpp  gamma.hpp  (+63 more)
src/archon/log/: CMakeLists.txt  channel.hpp  channel_logger.hpp  channel_map.hpp  duplicating_logger.hpp  encoding_logger.hpp  jail_logger.hpp  limit.hpp  limit_logger.hpp  log.hpp  log_level.cpp  log_level.hpp  log_namespace.hpp  logger.hpp  prefix.hpp  prefix_logger.hpp  sink.hpp  (+2 more)
(+812 files in other folders)
