noinst_PROGRAMS = text_join series div_mod bit_cast bitscan atomic utf16 char_enc enum time \
bind_ref unique_ptr refcnt shared_ptr weak_ptr random iterator file dir_scan value_codec \
text_table config options

text_join_SOURCES = text_join.cpp
series_SOURCES = series.cpp
div_mod_SOURCES = div_mod.cpp
bit_cast_SOURCES = bit_cast.cpp
bitscan_SOURCES = bitscan.cpp
atomic_SOURCES = atomic.cpp
utf16_SOURCES = utf16.cpp
char_enc_SOURCES = char_enc.cpp
enum_SOURCES = enum.cpp
time_SOURCES = time.cpp
bind_ref_SOURCES =  bind_ref.cpp
unique_ptr_SOURCES = unique_ptr.cpp
refcnt_SOURCES = refcnt.cpp
shared_ptr_SOURCES = shared_ptr.cpp
weak_ptr_SOURCES = weak_ptr.cpp
random_SOURCES = random.cpp
iterator_SOURCES = iterator.cpp
file_SOURCES = file.cpp
dir_scan_SOURCES = dir_scan.cpp
value_codec_SOURCES = value_codec.cpp
text_table_SOURCES = text_table.cpp
config_SOURCES = config.cpp
options_SOURCES = options.cpp

LDADD = ../libarchon_core.la

AM_CPPFLAGS = -I$(top_srcdir)/src
AM_CXXFLAGS = -Wold-style-cast
